fix horizontal scrollbar on homepage

--- a/src/scss/grommet-core/_objects.article.scss
+++ b/src/scss/grommet-core/_objects.article.scss
@@ -7,6 +7,7 @@
     text-align: center;
     height: 100vh;
     width: 100vw;
+    max-width: 100%;
 
     > .article__controls {
       position: fixed;
